--- a/plugin/src/dialog.xhtml
+++ b/plugin/src/dialog.xhtml
@@ -44,8 +44,6 @@
     .library-status-icon { font-size: 13px; vertical-align: middle; display: none; }
     .library-name { font-weight: 500; font-size: 13px; vertical-align: middle; }
     .library-meta { font-size: 11px; color: #666; vertical-align: middle; margin-left: 6px; }
-    .indexing-mode-select { width: 100%; padding: 6px; font-family: inherit; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-    .mode-description { margin-top: 5px; font-size: 12px; color: #666; min-height: 18px; }
     .feedback-container { height: 120px; margin-bottom: 15px; flex-shrink: 0; }
     .progress-section { height: 100%; padding: 10px; background-color: #f5f5f5; border-radius: 4px; box-sizing: border-box; display: flex; flex-direction: column; }
     .progress-label { font-weight: 500; margin-bottom: 5px; }
@@ -106,20 +104,6 @@
         </div>
       </div>
 
-      <!-- Indexing mode selection -->
-      <div class="form-group">
-        <label for="indexing-mode">Indexing mode:</label>
-        <select id="indexing-mode" class="indexing-mode-select">
-          <option value="auto" selected="selected">Auto (Recommended)</option>
-          <option value="incremental">Quick Update (Incremental)</option>
-          <option value="full">Full Reindex</option>
-        </select>
-        <div class="mode-description">
-          <span id="mode-auto-desc" class="mode-desc-text">Automatically chooses the best indexing method</span>
-          <span id="mode-incremental-desc" class="mode-desc-text" style="display: none;">Only indexes new or modified items</span>
-          <span id="mode-full-desc" class="mode-desc-text" style="display: none;">Reindexes entire library (slower)</span>
-        </div>
-      </div>
 
       <!-- Feedback container (fixed height) -->
       <div class="feedback-container">
@@ -142,6 +126,10 @@
 
     <!-- Dialog buttons -->
     <div class="dialog-buttons">
+      <label id="force-reindex-container" class="force-reindex-label" style="display: none; margin-right: auto; align-items: center;">
+        <input type="checkbox" id="force-full-reindex" style="margin-right: 5px;"/>
+        <span style="font-size: 13px; color: #666;">Force Full Reindex (Dev)</span>
+      </label>
       <button id="cancel-button" type="button" class="dialog-button" title="Close this dialog">Close</button>
       <button id="submit-button" type="button" class="dialog-button primary">Submit</button>
     </div>
