--- a/plugin/src/dialog.xhtml
+++ b/plugin/src/dialog.xhtml
@@ -38,9 +38,12 @@
     .form-group { margin-bottom: 15px; flex-shrink: 0; }
     .form-group label { display: block; margin-bottom: 5px; font-weight: 500; }
     .question-input { width: 100%; padding: 8px; font-family: inherit; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; resize: vertical; }
-    .library-list { border: 1px solid #ccc; padding: 10px; height: 120px; overflow-y: auto; box-sizing: border-box; }
-    .library-checkbox { display: flex; align-items: center; padding: 5px 0; }
-    .library-checkbox input { margin-right: 8px; }
+    .library-list { border: 1px solid #ccc; padding: 8px; height: 120px; overflow-y: auto; box-sizing: border-box; line-height: 1.5; }
+    .library-checkbox { display: block; padding: 1px 0; margin: 0; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+    .library-checkbox input { margin: 0 4px 0 0; vertical-align: middle; }
+    .library-status-icon { font-size: 13px; vertical-align: middle; display: none; }
+    .library-name { font-weight: 500; font-size: 13px; vertical-align: middle; }
+    .library-meta { font-size: 11px; color: #666; vertical-align: middle; margin-left: 6px; }
     .feedback-container { height: 120px; margin-bottom: 15px; flex-shrink: 0; }
     .progress-section { height: 100%; padding: 10px; background-color: #f5f5f5; border-radius: 4px; box-sizing: border-box; display: flex; flex-direction: column; }
     .progress-label { font-weight: 500; margin-bottom: 5px; }
@@ -55,8 +58,12 @@
     .dialog-buttons { display: flex; justify-content: flex-end; gap: 10px; padding-top: 15px; border-top: 1px solid #ddd; flex-shrink: 0; }
     .dialog-button { padding: 8px 20px; border: 1px solid #ccc; border-radius: 4px; background-color: #f5f5f5; color: #333; cursor: pointer; }
     .dialog-button:hover { background-color: #e5e5e5; }
+    .dialog-button:disabled { opacity: 0.5; cursor: not-allowed; background-color: #f5f5f5; }
+    .dialog-button:disabled:hover { background-color: #f5f5f5; }
     .dialog-button.primary { background-color: #0066cc; color: #fff; border-color: #0066cc; }
     .dialog-button.primary:hover { background-color: #0052a3; }
+    .dialog-button.primary:disabled { opacity: 0.5; cursor: not-allowed; background-color: #0066cc; }
+    .dialog-button.primary:disabled:hover { background-color: #0066cc; }
   </style>
 </head>
 
@@ -72,6 +79,23 @@
                   class="question-input"></textarea>
       </div>
 
+      <!-- Similarity threshold -->
+      <div class="form-group">
+        <label for="similarity-threshold">
+          Similarity threshold: <span id="similarity-value">0.3</span>
+        </label>
+        <input type="range"
+               id="similarity-threshold"
+               min="0.0"
+               max="1.0"
+               step="0.1"
+               value="0.3"
+               style="width: 100%;" />
+        <div style="font-size: 11px; color: #666; margin-top: 3px;">
+          Lower values return more results but may be less relevant
+        </div>
+      </div>
+
       <!-- Library selection -->
       <div class="form-group">
         <label>Select libraries to search:</label>
@@ -79,6 +103,7 @@
           <!-- Libraries will be populated by JavaScript -->
         </div>
       </div>
+
 
       <!-- Feedback container (fixed height) -->
       <div class="feedback-container">
@@ -101,7 +126,11 @@
 
     <!-- Dialog buttons -->
     <div class="dialog-buttons">
-      <button id="cancel-button" type="button" class="dialog-button">Cancel</button>
+      <label id="force-reindex-container" class="force-reindex-label" style="display: none; margin-right: auto; align-items: center;">
+        <input type="checkbox" id="force-full-reindex" style="margin-right: 5px;"/>
+        <span style="font-size: 13px; color: #666;">Force Full Reindex (Dev)</span>
+      </label>
+      <button id="cancel-button" type="button" class="dialog-button" title="Close this dialog">Close</button>
       <button id="submit-button" type="button" class="dialog-button primary">Submit</button>
     </div>
   </div>
